--- a/market_simulation.ipynb
+++ b/market_simulation.ipynb
@@ -33,10 +33,8 @@
    "outputs": [],
    "source": [
     "def start():\n",
-    "    AA = list(range(0,15,1));\n",
-    "    for i in range(iterateDifferentStart) : {\n",
-    "        createBasicInfo()\n",
-    "    }"
+    "    for i in range(iterateDifferentStart):\n",
+    "        createBasicInfo()"
    ]
   },
   {
@@ -83,14 +81,13 @@
     "def calculateTimeOfAdjustmentsCompany(numberReactionEvent, company, timeBetweenMarketEvents):\n",
     "    if numberReactionEvent==0:\n",
     "        return(random.uniform(0,1)) \n",
-    "    else: return(calculateTimeOfAdjustmentsCompany(numberReactionEvent-1, company, timeBetweenMarketEvents)+timeBetweenMarketEvents[company][numberReactionEvent]);\n",
+    "    else: return(calculateTimeOfAdjustmentsCompany(numberReactionEvent-1, company, timeBetweenMarketEvents)+timeBetweenMarketEvents[company][numberReactionEvent])\n",
     "    \n",
     "def calculateTimeOfCustomerArrival(numberCustomerEvent, timeBetweenCustomerEvents):\n",
     "    if numberCustomerEvent==0:\n",
     "        return(0)\n",
     "    else:\n",
-    "        return(calculateTimeOfCustomerArrival(numberCustomerEvent-1, timeBetweenCustomerEvents) + timeBetweenCustomerEvents[numberCustomerEvent]);\n",
-    "\n"
+    "        return(calculateTimeOfCustomerArrival(numberCustomerEvent-1, timeBetweenCustomerEvents) + timeBetweenCustomerEvents[numberCustomerEvent])"
    ]
   },
   {
@@ -102,10 +99,10 @@
    "outputs": [],
    "source": [
     "def createSimulationParameters(pricesCompanies, qualityCompanies, ratingCompanies, priceRanks, qualityRanks, ratingRanks, accumulatedProfit):\n",
-    "    timeBetweenMarketEvents = [[random.uniform(0.8,1.2) if numberReactionEvents!= 1 else 1.1 for _ in range(numberReactionEvents)] for _ in range(numberPlayers)]\n",
+    "    timeBetweenMarketEvents = [[random.uniform(0.8, 1.2) if numberReactionEvents != 1 else 1.1 for _ in range(numberReactionEvents)] for _ in range(numberPlayers)]\n",
     "\n",
     "\n",
-    "    timeOfAdjustmentsCompany = np.array([[calculateTimeOfAdjustmentsCompany(i,j, timeBetweenMarketEvents) for i in range(numberReactionEvents)] for j in range(numberPlayers)])\n",
+    "    timeOfAdjustmentsCompany = np.array([[calculateTimeOfAdjustmentsCompany(i, j, timeBetweenMarketEvents) for i in range(numberReactionEvents)] for j in range(numberPlayers)])\n",
     "\n",
     "    priceAdjustmentsBeforeHorizon = set([timeOfAdjustmentsCompany.flatten()[i] for i in range(len(timeOfAdjustmentsCompany.flatten())) if timeOfAdjustmentsCompany.flatten()[i] < timeHorizon])\n",
     "    priceAdjustmentsBeforeHorizon.add(timeHorizon)\n",
@@ -115,8 +112,8 @@
     "\n",
     "    timePriceAdjustments = [priceAdjustmentsBeforeHorizon[i] for i in range(numberPriceAdjustmentsBeforeHorizon)]\n",
     "\n",
-    "    #we have to be careful because of the first timeslot\n",
-    "    timeBetweenAdjustments = [timePriceAdjustments[i]-timePriceAdjustments[i-1] if i> 0 else timePriceAdjustments[i] for i in range(numberPriceAdjustmentsBeforeHorizon)]\n",
+    "    # we have to be careful because of the first timeslot\n",
+    "    timeBetweenAdjustments = [timePriceAdjustments[i]-timePriceAdjustments[i-1] if i > 0 else timePriceAdjustments[i] for i in range(numberPriceAdjustmentsBeforeHorizon)]\n",
     "\n",
     "    timeBetweenCustomerEvents = [meanDifferenceCustomerArrival*np.random.exponential() for _ in range(numberCustomerEvents)]\n",
     "\n",
@@ -154,31 +151,24 @@
     "                     timePriceAdjustments, timeBetweenAdjustments, timeBetweenCustomerEvents, timeOfCustomerArrival, companyAdjustingAtTime,\n",
     "                     randomCustomerScoringOfCompany, randomCustomerScoringQuality, randomCustomerScoringRating, randomCustomerDecision):\n",
     "    currentTimeProcess = 0\n",
-    "\n",
     "    countAdjustmentsCompany = 0\n",
-    "\n",
     "    watchedCompany = companyToWatch\n",
-    "    \n",
+    "\n",
     "    countAdjustmentsWatchedCompany = sum([1 for i in range(numberPriceAdjustmentsBeforeHorizon) if companyAdjustingAtTime[i] == watchedCompany])\n",
     "\n",
     "    timeAdjustmentsWatchedCompany = [0 for _ in range(countAdjustmentsWatchedCompany+1)]\n",
-    "\n",
     "    timeBetweenAdjustmentsWatchedCompany = [timeAdjustmentsWatchedCompany[i] - timeAdjustmentsWatchedCompany[i-1] for i in range(1, countAdjustmentsWatchedCompany)]\n",
     "\n",
     "    salesBetweenAdjustments = [0 for _ in range(countAdjustmentsWatchedCompany)]\n",
     "\n",
     "    price = [pricesCompanies[watchedCompany] for _ in range(1,countAdjustmentsWatchedCompany+2)]\n",
-    "\n",
     "    quality = [qualityCompanies[watchedCompany] for _ in range(1,countAdjustmentsWatchedCompany+2)]\n",
-    "\n",
     "    rating = [ratingCompanies[watchedCompany] for _ in range(1,countAdjustmentsWatchedCompany+2)]\n",
     "\n",
-    "    pricesCompetitors = [[pricesCompanies[c] for _ in range(countAdjustmentsWatchedCompany+1)] for c in range(numberPlayers) ]\n",
+    "    pricesCompetitors = [[pricesCompanies[c] for _ in range(countAdjustmentsWatchedCompany+1)] for c in range(numberPlayers)]\n",
+    "    qualityCompetitors = [[qualityCompanies[c] for _ in range(countAdjustmentsWatchedCompany+1)] for c in range(numberPlayers)]\n",
+    "    ratingCompetitors = [[ratingCompanies[c] for _ in range(countAdjustmentsWatchedCompany+1)] for c in range(numberPlayers)]\n",
     "\n",
-    "    qualityCompetitors = [[qualityCompanies[c] for _ in range(countAdjustmentsWatchedCompany+1)] for c in range(numberPlayers) ]\n",
-    "\n",
-    "    ratingCompetitors = [[ratingCompanies[c] for _ in range(countAdjustmentsWatchedCompany+1)] for c in range(numberPlayers) ]\n",
-    "    \n",
     "    runSimulation(pricesCompanies, qualityCompanies, ratingCompanies, priceRanks, qualityRanks, ratingRanks, accumulatedProfit,\n",
     "                     timeBetweenMarketEvents, timeOfAdjustmentsCompany, priceAdjustmentsBeforeHorizon, numberPriceAdjustmentsBeforeHorizon,\n",
     "                     timePriceAdjustments, timeBetweenAdjustments, timeBetweenCustomerEvents, timeOfCustomerArrival, companyAdjustingAtTime,\n",
@@ -203,19 +193,20 @@
     "                 currentTimeProcess, countAdjustmentsCompany, watchedCompany, countAdjustmentsWatchedCompany, timeAdjustmentsWatchedCompany,\n",
     "                 timeBetweenAdjustmentsWatchedCompany, salesBetweenAdjustments, price, quality, rating, pricesCompetitors, qualityCompetitors,\n",
     "                 ratingCompetitors):\n",
-    "    arrival_out =[[0 for _ in range(numberCustomerEvents)] for _ in range(numberPriceAdjustmentsBeforeHorizon-1)]\n",
+    "    arrival_out = [[0 for _ in range(numberCustomerEvents)] for _ in range(numberPriceAdjustmentsBeforeHorizon-1)]\n",
     "    buying_out = [[0 for _ in range(numberCustomerEvents)] for _ in range(numberPriceAdjustmentsBeforeHorizon-1)]\n",
     "    trajekt1_out = [[0 for _ in range(numberPlayers)] for _ in range(numberPriceAdjustmentsBeforeHorizon-1)]\n",
+    "\n",
     "    for i in range(1,numberPriceAdjustmentsBeforeHorizon): \n",
     "        for customer in [customer for customer in range(numberCustomerEvents) if timePriceAdjustments[i-1]< timeOfCustomerArrival[customer] < timePriceAdjustments[i]]:\n",
     "            arrival_out[i-1][customer]=[timeOfCustomerArrival[customer],0,customer]\n",
     "            for company in range(numberPlayers):\n",
     "                randomCustomerScoringOfCompany[company][customer]= (pricesCompanies[company]+ \n",
     "                randomCustomerScoringQuality[customer] * qualityCompanies[company] +\n",
-    "                randomCustomerScoringRating[customer] * (100-ratingCompanies[company]));\n",
+    "                randomCustomerScoringRating[customer] * (100-ratingCompanies[company]))\n",
     "            if min([randomCustomerScoringOfCompany[company][customer] for company in range(numberPlayers)]) < random.uniform(5,15):\n",
     "                randomCustomerDecision[customer] = np.argmin([randomCustomerScoringOfCompany[company][customer] for company in range(numberPlayers)])\n",
-    "                accumulatedProfit[randomCustomerDecision[customer]] = accumulatedProfit[randomCustomerDecision[customer]] + pricesCompanies[randomCustomerDecision[customer]];\n",
+    "                accumulatedProfit[randomCustomerDecision[customer]] = accumulatedProfit[randomCustomerDecision[customer]] + pricesCompanies[randomCustomerDecision[customer]]\n",
     "                buying_out[i-1][customer]=[timeOfCustomerArrival[customer], pricesCompanies[randomCustomerDecision[customer]], customer, randomCustomerDecision[customer]]\n",
     "        currentTimeProcess= priceAdjustmentsBeforeHorizon[i]\n",
     "        for company in range(numberPlayers):\n",
@@ -249,9 +240,9 @@
     "                if c!= watchedCompany:\n",
     "                    pricesCompetitors[c][countAdjustmentsCompany]= pricesCompanies[c]\n",
     "                    qualityCompetitors[c][countAdjustmentsCompany]= qualityCompanies[c]\n",
-    "                    ratingCompetitors[c][countAdjustmentsCompany]= ratingCompanies[c];\n",
+    "                    ratingCompetitors[c][countAdjustmentsCompany]= ratingCompanies[c]\n",
     "    #print(salesBetweenAdjustments)\n",
-    "    \n",
+    "\n",
     "    with open('arrival_out_S3.csv', 'a') as file:\n",
     "        writer = csv.writer(file, delimiter='\\t')\n",
     "        for w in range(numberPriceAdjustmentsBeforeHorizon-1):\n",
@@ -259,7 +250,7 @@
     "            for c in range(len(currentSim)):\n",
     "                line = list(currentSim[c])\n",
     "                writer.writerow(line)\n",
-    "            \n",
+    "\n",
     "    with open('buying_out_S3.csv', 'a') as file:\n",
     "        writer = csv.writer(file, delimiter='\\t')\n",
     "        for w in range(numberPriceAdjustmentsBeforeHorizon-1):\n",
@@ -267,21 +258,19 @@
     "            for c in range(len(currentSim)):\n",
     "                line = list(currentSim[c])\n",
     "                writer.writerow(line)\n",
-    "            \n",
+    "\n",
     "    with open('traject1_out_S3.csv', 'a') as file:\n",
     "        writer = csv.writer(file, delimiter='\\t')\n",
     "        for w in range(numberPriceAdjustmentsBeforeHorizon-1):\n",
     "            currentSim = list(filter(lambda x : x != 0, trajekt1_out[w]))\n",
     "            for k in range(len(currentSim)):\n",
     "                line= list(currentSim[k])\n",
-    "                writer.writerow(line)\n",
-    "\n",
-    "    "
+    "                writer.writerow(line)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,14 +283,14 @@
     "        '4' : round(random.uniform(13,13),2)\n",
     "    }[str(c)]\n",
     "\n",
-    "numberPlayers=5\n",
-    "timeHorizon=200\n",
-    "numberReactionEvents=timeHorizon+100\n",
-    "meanDifferenceCustomerArrival=1\n",
-    "numberCustomerEvents=int(timeHorizon/meanDifferenceCustomerArrival+100)\n",
-    "iterateDifferentStart=100\n",
-    "iterateSameStart=100\n",
-    "companyToWatch=0\n",
+    "numberPlayers = 5\n",
+    "timeHorizon = 200\n",
+    "numberReactionEvents = timeHorizon + 100\n",
+    "meanDifferenceCustomerArrival = 1\n",
+    "numberCustomerEvents = int(timeHorizon / meanDifferenceCustomerArrival + 100)\n",
+    "iterateDifferentStart = 100\n",
+    "iterateSameStart = 100\n",
+    "companyToWatch = 0\n",
     "start()"
    ]
   }
