restructured the monte carlo notebook and removed the unnecessary intensity notebook

--- a/monte_carlo.ipynb
+++ b/monte_carlo.ipynb
@@ -39,7 +39,12 @@
     "numberOfCustomerEvents = round(1.1*timeHorizon/meanTimeBetweenCustomerArrival)\n",
     "prices = np.arange(0,15.1,0.1)\n",
     "watchedCompany = 0\n",
-    "numberSimulations = 1000"
+    "numberSimulations = 1000\n",
+    "numberConsideredMarketSituations = 10\n",
+    "m = 2\n",
+    "numberCustomerEvents = 4\n",
+    "simulatedHorizon = 1\n",
+    "reactionTimeCompany = timeHorizon"
    ]
   },
   {
@@ -63,27 +68,6 @@
    },
    "outputs": [],
    "source": [
-    "numberConsideredMarketSituations = 40\n",
-    "\n",
-    "pricesCompaniesPred = np.array([[round(random.uniform(6,16),2) for _ in range(numberConsideredMarketSituations)]  for _ in range(numberPlayers)])\n",
-    "qualityCompaniesPred = np.array([[round(random.uniform(0.5,5.5)) for _ in range(numberConsideredMarketSituations)]  for _ in range(numberPlayers)])\n",
-    "ratingCompaniesPred = np.array([[round(random.uniform(90,100),1) for _ in range(numberConsideredMarketSituations)] for _ in range(numberPlayers)])\n",
-    "\n",
-    "priceRanksForFirm = [[1 +  \n",
-    "              sum([1 for i in range(numberPlayers) if prices[j]> pricesCompaniesPred[i][w] and i!=watchedCompany]) +\n",
-    "              sum([1 for i in range(numberPlayers) if prices[j]== pricesCompaniesPred[i][w] and i!=watchedCompany])/2\n",
-    "              for j in range(len(prices))]for w in range(numberConsideredMarketSituations)]\n",
-    "qualityRankForFirm = [(1 +  \n",
-    "              sum([1 for i in range(numberPlayers) if qualityCompaniesPred[watchedCompany][w]> qualityCompaniesPred[i][w] and i!=watchedCompany]) +\n",
-    "              sum([1 for i in range(numberPlayers) if qualityCompaniesPred[watchedCompany][w]== qualityCompaniesPred[i][w] and i!=watchedCompany])/2)for w in range(numberConsideredMarketSituations)]\n",
-    "                         \n",
-    "ratingRanks = [[1 +  \n",
-    "              sum([1 for i in range(numberPlayers) if ratingCompaniesPred[j][w]> ratingCompaniesPred[i][w] and i!=j]) +\n",
-    "              sum([1 for i in range(numberPlayers) if ratingCompaniesPred[j][w]== ratingCompaniesPred[i][w] and i!=j])/2\n",
-    "              for j in range(numberPlayers)]for w in range(numberConsideredMarketSituations)]\n",
-    "\n",
-    "numberExplanatoryVariables = 10\n",
-    "\n",
     "def explanatoryVariables(explanatoryVariable, numberPrice, marketSituation):\n",
     "    return {\n",
     "        '0' : 1,\n",
@@ -99,7 +83,35 @@
     "        (prices[numberPrice]+0.5*qualityCompaniesPred[watchedCompany][marketSituation]+0.25*(100-ratingCompaniesPred[watchedCompany][marketSituation])) <\n",
     "        min([pricesCompaniesPred[j][marketSituation] +0.5*qualityCompaniesPred[j][marketSituation]+0.25*(100-ratingCompaniesPred[j][marketSituation]) for j in range(numberPlayers) if j!= watchedCompany]))\n",
     "        else 0,\n",
-    "    }[str(explanatoryVariable)]\n",
+    "    }[str(explanatoryVariable)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pricesCompaniesPred = np.array([[round(random.uniform(6,16),2) for _ in range(numberConsideredMarketSituations)]  for _ in range(numberPlayers)])\n",
+    "qualityCompaniesPred = np.array([[round(random.uniform(0.5,5.5)) for _ in range(numberConsideredMarketSituations)]  for _ in range(numberPlayers)])\n",
+    "ratingCompaniesPred = np.array([[round(random.uniform(90,100),1) for _ in range(numberConsideredMarketSituations)] for _ in range(numberPlayers)])\n",
+    "\n",
+    "priceRanksForFirm = np.array([[1 +  \n",
+    "              sum([1 for i in range(numberPlayers) if prices[j]> pricesCompaniesPred[i][w] and i!=watchedCompany]) +\n",
+    "              sum([1 for i in range(numberPlayers) if prices[j]== pricesCompaniesPred[i][w] and i!=watchedCompany])/2\n",
+    "              for j in range(len(prices))]for w in range(numberConsideredMarketSituations)])\n",
+    "qualityRankForFirm = np.array([(1 +  \n",
+    "              sum([1 for i in range(numberPlayers) if qualityCompaniesPred[watchedCompany][w]> qualityCompaniesPred[i][w] and i!=watchedCompany]) +\n",
+    "              sum([1 for i in range(numberPlayers) if qualityCompaniesPred[watchedCompany][w]== qualityCompaniesPred[i][w] and i!=watchedCompany])/2)for w in range(numberConsideredMarketSituations)])\n",
+    "                         \n",
+    "ratingRanks = np.array([[1 +  \n",
+    "              sum([1 for i in range(numberPlayers) if ratingCompaniesPred[j][w]> ratingCompaniesPred[i][w] and i!=j]) +\n",
+    "              sum([1 for i in range(numberPlayers) if ratingCompaniesPred[j][w]== ratingCompaniesPred[i][w] and i!=j])/2\n",
+    "              for j in range(numberPlayers)]for w in range(numberConsideredMarketSituations)])\n",
+    "\n",
+    "numberExplanatoryVariables = 10\n",
     "\n",
     "valuesExplanatoryVariables = [[[explanatoryVariables(explanatoryVariable, numberPrice, w) for explanatoryVariable in range(numberExplanatoryVariables)] for numberPrice in range(len(prices))]for w in range(numberConsideredMarketSituations)]\n",
     "predictionEstimated = [[0.5 for _ in range(len(prices))] for _ in range(numberConsideredMarketSituations)]\n",
@@ -150,7 +162,7 @@
     "def calculatePrices(pricesCompaniesAdjustments, adjustingFirm):\n",
     "    for i in range(len(pricesCompaniesAdjustments)):\n",
     "        if i > 0:\n",
-    "            pricesCompaniesAdjustments[i, adjustingFirm[i]] = priceAdjustmentRules(adjustingFirm[i],pricesCompaniesAdjustments[i-1])\n",
+    "            pricesCompaniesAdjustments[i][adjustingFirm[i]] = priceAdjustmentRules(adjustingFirm[i],pricesCompaniesAdjustments[i-1])\n",
     "    return pricesCompaniesAdjustments"
    ]
   },
@@ -162,11 +174,6 @@
    },
    "outputs": [],
    "source": [
-    "m=2\n",
-    "numberCustomerEvents=4\n",
-    "simulatedHorizon = 1\n",
-    "reactionTimeCompany = timeHorizon\n",
-    "\n",
     "timeBetweenMarketEventsCompany = np.array([[[random.uniform(0.8,1.2) if company!= watchedCompany else reactionTimeCompany for i in range(m)] for company in range(numberPlayers)] for _ in range(numberSimulations)])\n",
     "timeOfAdjustmentsCompany = np.array([[[calculateTimeOfAdjustmentsCompany(company,simulationNumber ,i,timeBetweenMarketEventsCompany) for i in range(m)] for company in range(numberPlayers)] for simulationNumber in range(numberSimulations)])\n",
     "\n",
@@ -183,62 +190,36 @@
     "\n",
     "adjustingFirm = np.array([[min(np.where(timeOfAdjustmentsCompany[simulationNumber]==priceAdjustmentsBeforeHorizon[simulationNumber][i] )[0]) for i in range(numberPriceAdjustmentsBeforeHorizon[simulationNumber])] for simulationNumber in range(numberSimulations)])\n",
     "\n",
-    "randomCustomerScoring = np.array([[0 for _ in range(numberPlayers)] for simulationNumber in range(numberSimulations)])\n",
-    "randomCustomerDecision = np.array([[-1 for _ in range(numberCustomerEvents)] for simulationNumber in range(numberSimulations)])\n",
     "randomCustomerScoringQuality = np.array([[random.uniform(0,1) for _ in range(numberCustomerEvents)] for simulationNumber in range(numberSimulations)])\n",
     "randomCustomerScoringRating = np.array([[random.uniform(0,0.5) for _ in range(numberCustomerEvents)] for simulationNumber in range(numberSimulations)])\n",
+    "                         \n",
+    "customerScoringQualityRating = np.array([[[[(randomCustomerScoringQuality[s][c]*qualityCompaniesPred[k,w] +\n",
+    "    randomCustomerScoringRating[s][c]*(100-ratingCompaniesPred[k,w]))for k in range(numberPlayers)] for c in range(numberCustomerEvents)] for s in range(numberSimulations)]for w in range(numberConsideredMarketSituations)])\n",
+    "pricesCompanies = np.array([[[pricesCompaniesPred[k,w] if k!=watchedCompany else prices[a] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]  for k in range(numberPlayers)])\n",
+    "pricesCompaniesAdjustments = np.array([[[[[pricesCompanies[k,a,w]  for k in range(numberPlayers)]for _ in range(numberPriceAdjustmentsBeforeHorizon[s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
+    "pricesCompaniesAdjustments = np.array([[[np.array(calculatePrices(pricesCompaniesAdjustments[a,w,s], adjustingFirm[s])) for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
     "\n",
-    "As = np.array([[[0 for _ in range(numberConsideredMarketSituations)]for _ in range(numberSimulations)] for simulationNumber in range(numberPlayers)])\n",
-    "A = np.array([[[float(0) for _ in range(numberConsideredMarketSituations)]for _ in range(6)]for _ in range(numberPlayers)])\n",
+    "gen = np.array([[[[list((x for x in range(numberCustomerEvents) if timeMarketEvents[s][i]< timeCustomerEvents[s][x]< timeMarketEvents[s][i+1])) for i in range(numberPriceAdjustmentsBeforeHorizon[s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
+    "randomCustomerScoring = np.array([[[[[[(pricesCompaniesAdjustments[a,w,s][i,k] + customerScoringQualityRating[w,s,c,k]) for k in range(numberPlayers)]for c in gen[a,w,s][i]]for i in range(numberPriceAdjustmentsBeforeHorizon[s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
+    "randomCustomerDecision = np.array([[[[[np.argmin(randomCustomerScoring[a,w,s][i][c]) if min(randomCustomerScoring[a,w,s][i][c])< random.uniform(5,15) else -1 for c in range(len(gen[a,w,s][i]))]for i in range(numberPriceAdjustmentsBeforeHorizon[s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
+    "As = np.array([[[[np.count_nonzero(np.hstack(randomCustomerDecision[a,w,s])== k) for k in range(numberPlayers)]for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
     "\n",
-    "P_ori = np.array([[float(0) for _ in range(len(prices))] for _ in range(numberConsideredMarketSituations)])\n",
-    "P_ori2 = np.array([[float(0) for _ in range(len(prices))] for _ in range(numberConsideredMarketSituations)])\n",
+    "A = np.array([[[[1/numberSimulations*np.count_nonzero(As[a,w,:,k]==x) for k in range(numberPlayers)]for x in range(6)]for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
+    "P_ori = [[1- A[a,w,0,watchedCompany]for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]\n",
+    "P_ori2 = [[sum([A[a,w,2,watchedCompany]for x in range(2,6)])for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]\n",
     "\n",
-    "playersWithoutWatched = [i for i in range(numberPlayers) if i!=watchedCompany]\n",
-    "for w in range(numberConsideredMarketSituations):\n",
-    "    pricesCompaniesPredW= pricesCompaniesPred[:,w]\n",
-    "    qualityCompanies = [qualityCompaniesPred[k, w] for k in range(numberPlayers)]\n",
-    "    ratingCompanies = [ratingCompaniesPred[k, w] for k in range(numberPlayers)]\n",
-    "    customerScoringQualityRating = np.array([[[(randomCustomerScoringQuality[s][c]*qualityCompanies[k] +\n",
-    "                                                          randomCustomerScoringRating[s][c]*(100-ratingCompanies[k]))for k in range(numberPlayers)] for c in range(numberCustomerEvents)] for s in range(numberSimulations)])\n",
-    "    for a in range(len(prices)):\n",
-    "        AsSim = np.array(As[:,:,w])\n",
-    "        randomCustomerDecision = np.array([[-1 for _ in range(numberCustomerEvents)] for simulationNumber in range(numberSimulations)])\n",
-    "        for s in range(numberSimulations):\n",
-    "            randomCustomerScoringSim = randomCustomerScoring[s]\n",
-    "            pricesCompanies[watchedCompany]=prices[a]\n",
-    "            if numberPlayers>1:\n",
-    "                pricesCompanies[playersWithoutWatched] = [pricesCompaniesPredW[k] for k in playersWithoutWatched]\n",
-    "            numberPriceAdjustmentsBeforeHorizonCurrent = numberPriceAdjustmentsBeforeHorizon[s]\n",
-    "            pricesCompaniesAdjustments = np.array([[pricesCompanies[i] for i in range(numberPlayers)]for _ in range(numberPriceAdjustmentsBeforeHorizonCurrent)])\n",
-    "            pricesCompaniesAdjustments = np.array(calculatePrices(pricesCompaniesAdjustments, adjustingFirm[s]))\n",
-    "            for i in range(numberPriceAdjustmentsBeforeHorizonCurrent):\n",
-    "                gen = list((x for x in range(numberCustomerEvents) if timeMarketEvents[s][i]< timeCustomerEvents[s][x]< timeMarketEvents[s][i+1]))\n",
-    "                randomCustomerScoringSim = np.array([[(pricesCompaniesAdjustments[i][k] + customerScoringQualityRating[s,c,k])for k in range(numberPlayers)] for c in gen])\n",
-    "                indexGen = [x - min(gen) for x in gen]\n",
-    "                for c in indexGen:\n",
-    "                    if min(randomCustomerScoringSim[c]) < random.uniform(5,15):\n",
-    "                        randomCustomerDecision[s][c] = np.argmin([randomCustomerScoringSim[c][company] for company in range(numberPlayers)])\n",
-    "                        AsSim[randomCustomerDecision[s][c]][s]=AsSim[randomCustomerDecision[s][c]][s] +1 \n",
-    "        for x in range(6):\n",
-    "            for company in range(numberPlayers):\n",
-    "                salesForDecision = np.array(AsSim[company,:])\n",
-    "                A[company][x][w] = 1/numberSimulations*len(salesForDecision[salesForDecision==x])\n",
-    "        P_ori[w][a] = 1-A[watchedCompany][0][w]\n",
-    "        P_ori2[w][a] = A[watchedCompany][2][w]\n",
-    "\n",
-    "EW_ori = [[prices[a]*P_ori[w][a] for w in range(numberConsideredMarketSituations)]for a in range(len(prices))]\n",
+    "EW_ori = [[prices[a]*P_ori[a][w] for w in range(numberConsideredMarketSituations)]for a in range(len(prices))]\n",
     "EW_est = [[prices[a]*predictionEstimated[w][a] for w in range(numberConsideredMarketSituations)]for a in range(len(prices))]\n",
     "\n",
-    "D_P = [1/numberConsideredMarketSituations*sum([abs(P_ori[w][a]- predictionEstimated[w][a]) for w in range(numberConsideredMarketSituations)]) for a in range(len(prices))]\n",
+    "D_P = [1/numberConsideredMarketSituations*sum([abs(P_ori[a][w]- predictionEstimated[w][a]) for w in range(numberConsideredMarketSituations)]) for a in range(len(prices))]\n",
     "D_EW = [1/numberConsideredMarketSituations*sum([abs(EW_ori[a][w]- EW_est[a][w]) for w in range(numberConsideredMarketSituations)]) for a in range(len(prices))]\n",
+    "\n",
     "with open('PEW_comparison_S3.csv', 'w') as file:\n",
     "    writer = csv.writer(file, delimiter='\\t')\n",
     "    for w in range(numberConsideredMarketSituations):\n",
     "        for a in range(len(prices)):\n",
-    "            line = [w+1,prices[a],P_ori[w][a], P_ori2[w][a], predictionEstimated[w][a], EW_ori[a][w], EW_est[a][w], D_P[a], D_EW[a]]\n",
-    "            writer.writerow(line)\n",
-    "\n"
+    "            line = [w+1,prices[a],P_ori[a][w], P_ori2[a][w], predictionEstimated[w][a], EW_ori[a][w], EW_est[a][w], D_P[a], D_EW[a]]\n",
+    "            writer.writerow(line)"
    ]
   }
  ],
