Removed intensity notebook from the readme and changed the start configuration for monte carlo

--- a/monte_carlo.ipynb
+++ b/monte_carlo.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "This notebook creates two files. For a given number of market situations and a given set of prices, it creates features and saves them in the `demand_prediction_data` file. Next, for each market situation and each price, the notebook runs multiple simulations and tracks purchases. The time horizon is 1.\n",
     "\n",
-    "Finally, the notebook calculates the probabilities of a purchase for each price and market situation and stores them in the `PEW_comparison` file."
+    "Finally, the notebook calculates the probabilities of a purchase for each price and market situation and stores them in the `PEW_comparison` file.\n",
+    "\n",
+    "Because of performance reasons the number of simulations and the number of considered market situations used in the start configuration are smaller than the ones used for the data for the paper. The inline comments show the values used in the paper, which lead to a longer runtime."
    ]
   },
   {
@@ -39,11 +41,10 @@
     "numberOfCustomerEvents = round(1.1*timeHorizon/meanTimeBetweenCustomerArrival)\n",
     "prices = np.arange(0,15.1,0.1)\n",
     "watchedCompany = 0\n",
-    "numberSimulations = 1000\n",
-    "numberConsideredMarketSituations = 10\n",
+    "numberSimulations = 100  # value used for paper: 10000\n",
+    "numberConsideredMarketSituations = 10   # value used for paper: 40\n",
     "m = 2\n",
     "numberCustomerEvents = 4\n",
-    "simulatedHorizon = 1\n",
     "reactionTimeCompany = timeHorizon"
    ]
   },
@@ -169,9 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "timeBetweenMarketEventsCompany = np.array([[[random.uniform(0.8,1.2) if company!= watchedCompany else reactionTimeCompany for i in range(m)] for company in range(numberPlayers)] for _ in range(numberSimulations)])\n",
